[project]
name = "MultiColorMasking"
description = "Masking multiple colors in a segmentation image"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/comfyanonymous/ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lyra-research"
DisplayName = "ComfyUI"
Icon = ""
